# pyfastmarkdownlint

./: LICENSE  README.md  pyproject.toml
src/pyfastmarkdownlint/: pyfastmarkdownlint.py
